; ModuleID = '/home/carl/AnghaBench/jerryscript/jerry-ext/arg/extr_arg-transform-functions.c_jerryx_arg_transform_number_strict_common.c'
source_filename = "/home/carl/AnghaBench/jerryscript/jerry-ext/arg/extr_arg-transform-functions.c_jerryx_arg_transform_number_strict_common.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JERRY_ERROR_TYPE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"It is not a number.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, double*)* @jerryx_arg_transform_number_strict_common to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @jerryx_arg_transform_number_strict_common(i32* %0, double* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca double*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store double* %1, double** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @jerryx_arg_js_iterator_pop(i32* %7)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @jerry_value_is_number(i32 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %15, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @JERRY_ERROR_TYPE, align 4
  %14 = call i32 @jerry_create_error(i32 %13, i32* bitcast ([20 x i8]* @.str to i32*))
  store i32 %14, i32* %3, align 4
  br label %20

15:                                               ; preds = %2
  %16 = load i32, i32* %6, align 4
  %17 = call double @jerry_get_number_value(i32 %16)
  %18 = load double*, double** %5, align 8
  store double %17, double* %18, align 8
  %19 = call i32 (...) @jerry_create_undefined()
  store i32 %19, i32* %3, align 4
  br label %20

20:                                               ; preds = %15, %12
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @jerryx_arg_js_iterator_pop(i32*) #1

declare dso_local i32 @jerry_value_is_number(i32) #1

declare dso_local i32 @jerry_create_error(i32, i32*) #1

declare dso_local double @jerry_get_number_value(i32) #1

declare dso_local i32 @jerry_create_undefined(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
